<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginpageActivity">

     <ImageView
        android:id="@+id/imageView"
        android:layout_width="337dp"
        android:layout_height="142dp"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047"
        app:srcCompat="@drawable/img_1" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="413dp"
        android:layout_height="496dp"
        android:background="@color/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/Email"
            android:layout_width="291dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="331dp"
            android:background="@color/white"
            android:ems="10"

            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="291dp"
            android:layout_height="47dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="189dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="260dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn2Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="157dp"
            android:layout_marginTop="276dp"
            android:layout_marginEnd="158dp"
            android:layout_marginBottom="172dp"
            android:text="LOGIN" />


        <TextView
            android:id="@+id/textAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="185dp"
            android:layout_marginBottom="96dp"
            android:text="Don't have an account?"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="96dp"
            android:text="@string/registerText"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="105dp"
            android:layout_marginEnd="127dp"
            android:layout_marginBottom="419dp"
            android:text="@string/textNote"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>